Implement arc production ship systems